# ComputerGraphics

./: readme.md
bspline_animation/: CMakeLists.txt  app.cpp  app.h  bspline.cpp  bspline.h  constants.h  formats.h  main.cpp  models.h  queue_families.cpp  queue_families.h  textures.cpp  textures.h  uniform.h  vertex.h
bspline_animation/assets/shaders/: base.frag  base.vert  bspline.frag  bspline.geom  bspline.vert  texturedModel.vert
particles/: app.cpp  app.h  frame_sync.h  lab.h  part.comp  part.frag  part.vert  render_pass.h
particles/mvk/: buffer.h  camera.h  commands.h  context.h  debug.h  device.h  device_memory.h  gpu.h  image.h  instance.h  pipelines.h  queue.h  staging.h  surface.h  swapchain.h  utils.h
pn_triangles/: Lab3.vcxproj  Lab3.vcxproj.filters  PNTriangles.sln  app_context.h  main.cpp  mesh.h  model.h  pn_triangle_app.cpp  pn_triangle_app.h  sync.h  uniform_alloc.h  vertex.h
pn_triangles/mvk/: camera.h  commands.h  context.h  debug.h  device.h  device_memory.h  gpu.h  image.h  instance.h  pipelines.h  queue.h  render_pass.h  staging.h  surface.h  swapchain.h  utils.h  vk_mem_alloc.h
pn_triangles/shaders/: base.frag  base.vert  compile_shaders.bat  pn.tesc  pn.tese  pn.vert
